--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-09-09 15:25+0000\n"
+"PO-Revision-Date: 2010-09-16 17:27+0000\n"
 "Last-Translator: Ptitphysik <amalpeyre@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-09-10 04:50+0000\n"
+"X-Launchpad-Export-Date: 2010-09-17 05:28+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -215,7 +215,7 @@ msgstr "Marquer comme non fait"
 
 #: GTG/taskeditor/__init__.py:34 GTG/taskbrowser/__init__.py:42
 msgid "Undismiss"
-msgstr "Annuler l'abandon"
+msgstr "Restaurer"
 
 #: GTG/taskeditor/__init__.py:35
 msgid "Keep as Note"
@@ -597,6 +597,18 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Bienvenue sur Getting Things Gnome !, votre nouvel organisateur personnel.\n"
+"\n"
+"Avec GTG, vos tâches sont faciles à mettre en œuvre ! Construire des ponts "
+"traversant les océans, changer une simple ampoule ou organiser vos soirées. "
+"Éditez une tâche, elle sera automatiquement sauvegardée.\n"
+"\n"
+"Une fois une tâche accomplie, cliquez sur &quot;Mark as done&quot;. Si une "
+"tâche n'est plus d'actualité, cliquez tout simplement sur "
+"&quot;Dismiss&quot;.\n"
+"\n"
+"Une tâche peut être composée de sous-tâches qui, à l'intérieur de celle-ci, "
+"se comportent comme des liens hypertexte :"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -610,6 +622,16 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Une fois que vous aurez lu la sous-tâche ci-dessus, pressez \"Marquer comme "
+"fait\". Si vous ne voulez plus accomplir cette tâche, pressez sur "
+"\"Abandonner\". Les tâches faites ainsi que les tâches abandonnées, sont "
+"gardées dans le panneau des tâches clôturées, caché par défaut, mais que "
+"vous pouvez facilement faire apparaître via le menu Vue.\n"
+"\n"
+"Si vous marquez une tâche comme faite, toutes ses sous-tâches seront "
+"automatiquement clôturées. GTG considère en effet que si vous décidez de "
+"clôturer une tâche, vous n'avez plus besoin de faire les sous-tâches.\n"
+"Vous pouvez également lire :"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -793,17 +815,15 @@ msgstr "Il manque des modules et des composants DBus"
 
 #: GTG/core/plugins/__init__.py:41
 msgid "Please install or start the following components:"
-msgstr "Merci d'installer ou de démarrer les composants suivants :"
+msgstr "Veuillez installer ou démarrer les composants suivants :"
 
 #: GTG/core/plugins/__init__.py:43
 msgid "Unknown error while loading the plugin."
-msgstr "Boum ! Erreur non-identifiée en tentant de charger le greffon"
+msgstr "Une erreur inconnue s'est produite lors du chargement du greffon."
 
 #: GTG/core/plugins/__init__.py:44
 msgid "Very helpful message, isn't it? Please report a bug."
-msgstr ""
-"Le message ne vous aide pas beaucoup, hein ? Merci de nous faire un rapport "
-"de bug à ce sujet."
+msgstr "Le problème n'est toujours pas résolu ? Merci de rapporter le bug."
 
 #: GTG/viewmanager/delete_dialog.py:58
 msgid ""
@@ -1386,84 +1406,12 @@ msgstr "Fermeture imminente"
 #~ msgstr "Une étiquette est un simple qui débute par &quot;@&quot;."
 
 #~ msgid ""
-#~ "Once you've read the above subtask, mark it as Done. If you don't want to do "
-#~ "the task, mark it as dismissed. Done and Dismissed tasks are kept in the "
-#~ "closed tasks pane, hidden by default but you can easily enable it in the "
-#~ "View menu."
-#~ msgstr ""
-#~ "Lorsque vous aurez lu la sous-tâche ci-dessus, marquez la comme Faite. Si "
-#~ "vous ne voulez-pas la faire, marquez la comme Abandonnée. Les tâches Faites "
-#~ "et celles Abandonnées sont visibles dans la vue des tâches terminées, qui "
-#~ "est cachée par défaut mais que vous pouvez facilement activer dans le menu "
-#~ "Vue."
-
-#~ msgid ""
 #~ "Some concepts come with subtasks: for example, a subtask's due date can "
 #~ "never be after its parent's due date."
 #~ msgstr ""
 #~ "Le fait d'avoir des sous-tâches impose certaines conséquences. Ainsi, la "
 #~ "date butoir d'une sous-tâche ne peut jamais être après la date butoir de sa "
 #~ "tâche parente."
-
-#~ msgid ""
-#~ "You can drag-n-drop a tag onto another to create \"subtags\". As an example, "
-#~ "if you drag the tag @to_pay onto the tag @money, every task tagged with "
-#~ "@to_pay will also appear in the view of @money (but the @money tag is not "
-#~ "added to the task)."
-#~ msgstr ""
-#~ "Vous pouvez glisser-déposer un tag sur un autre afin de créer un \"sous-"
-#~ "tag\". Par exemple, si vous gilssez le tag @à_payer sur le tag @comptes, "
-#~ "chaque tâche marquée avec le tag @à_payer va aussi apparaître dans la vue "
-#~ "@comptes (mais @comptes n'est pas ajouté à la tâche en question)."
-
-#~ msgid ""
-#~ "A new tag is only added to the current task. There's no recursion and the "
-#~ "tag is not applied to subtasks. But when you create a new subtask, this "
-#~ "subtask will inherit the tags of its parent as a good primary default (it "
-#~ "will also be the case if you add a tag to a parent just after creating a "
-#~ "subtask). Of course, you can modify at any time the tags of this particular "
-#~ "subtask. It will never be changed by the parent."
-#~ msgstr ""
-#~ "Un nouveau tag est seulement ajouté à la tâche actuellement ouverte. Il n'y "
-#~ "a pas de récursion et un tag ne sera pas ajouté aux sous-tâches. Mais si "
-#~ "vous créez une sous-tâche, celle-ci héritera automatiquement des tags de sa "
-#~ "tâche parente, comme un bon point de départ (cela sera aussi le cas si vous "
-#~ "rajoutez le tag juste après avoir ajouté la sous-tâche). Bien entendu, vous "
-#~ "pouvez modifier les tags d'une sous-tâche quand vous le désirez. Cela ne "
-#~ "sera jamais changé automatiquement par le parent."
-
-#~ msgid ""
-#~ "If you right click on a tag in the sidebar you can also set its color. It "
-#~ "will allow you to have a more colorful list of tasks, if you want it that "
-#~ "way."
-#~ msgstr ""
-#~ "Si vous cliquez droit sur un tag dans la barre latérale, vous pourrez "
-#~ "également lui assigner une couleur. Cela vous permet de mieux visualiser vos "
-#~ "tâches et de rendre votre liste plus attractive, du moins, si vous en avez "
-#~ "envie."
-
-#~ msgid ""
-#~ "Tags are useful to sort your tasks. In the view menu, you can enable a "
-#~ "sidebar which displays all the tags you are using so you can easily see "
-#~ "tasks assigned to a given tag. There's no limit to the number of tags a task "
-#~ "can have."
-#~ msgstr ""
-#~ "Les tags sont utiles pour trier vos tâches. Dans le menu Vue, vous pouvez "
-#~ "activer le panneau latéral qui affiche tous les tags que vous utilisez. De "
-#~ "cette manière, vous pouvez facilement voir les tâches comportant un tag "
-#~ "donné. Il n'y a pas de limite au nombre de tag qu'une tâche peut comporter."
-
-#~ msgid ""
-#~ "If you use tags, you can right click on a tag in the sidebar and choose to "
-#~ "hide tasks assigned to this particular tag in the workview. It's very useful "
-#~ "if you have a tag like &quot;someday&quot; that you use for tasks you would "
-#~ "like to do but are not particularly urgent."
-#~ msgstr ""
-#~ "Si vous utilisez les tags, vous pouvez cliquer droit sur un tag dans le "
-#~ "panneau latéral et choisir de cacher de la vue de travail les tâches "
-#~ "associées à ce tag particulier. Cela est très utile si vous avez  un tag du "
-#~ "style \"un_jour_peut_être\" que vous utilisez pour les choses que vous "
-#~ "aimeriez faire mais qui ne sont pas urgentes."
 
 #~ msgid "1 active task"
 #~ msgstr "1 tâche active"
