--- a/po/ru.po
+++ b/po/ru.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2010-12-06 01:02+0000\n"
-"Last-Translator: Alexey Ivanov <alexey.ivanes@gmail.com>\n"
+"PO-Revision-Date: 2011-10-24 02:02+0000\n"
+"Last-Translator: DmDr <cardioexp@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Launchpad-Export-Date: 2011-08-18 04:39+0000\n"
-"X-Generator: Launchpad (build 13697)\n"
+"X-Launchpad-Export-Date: 2011-10-24 05:14+0000\n"
+"X-Generator: Launchpad (build 14185)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -57,7 +57,7 @@ msgstr "Параметры Getting Things GNOME!"
 
 #: GTG/gtk/preferences.glade.h:9
 msgid "Hide closed tasks older than "
-msgstr ""
+msgstr "Скрыть завершенные задачи старше "
 
 #: GTG/gtk/preferences.glade.h:10
 msgid "Plugins"
@@ -65,7 +65,7 @@ msgstr "Модули"
 
 #: GTG/gtk/preferences.glade.h:11
 msgid "Show description preview in the task list."
-msgstr ""
+msgstr "Показать краткое описание в списке задач."
 
 #: GTG/gtk/preferences.glade.h:12
 msgid "Start Getting Things GNOME! on every login"
@@ -77,7 +77,7 @@ msgstr "_О модуле"
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin to get a description here."
-msgstr ""
+msgstr "Выберите плагин чтобы посмотреть описание."
 
 #: GTG/gtk/delete_dialog.py:63
 msgid ""
@@ -85,25 +85,35 @@ msgid ""
 msgid_plural ""
 "Deleting a task cannot be undone, and will delete the following task: "
 msgstr[0] ""
+"Это действие не может быть отменено и повлечёт за собой удаление следующей "
+"задач: "
 msgstr[1] ""
+"Это действие не может быть отменено и повлечёт за собой удаление следующих "
+"задач: "
+msgstr[2] ""
+"Это действие не может быть отменено и повлечёт за собой удаление следующих "
+"задач: "
 
 #: GTG/gtk/delete_dialog.py:68
 msgid "Are you sure you want to delete these tasks?"
 msgid_plural "Are you sure you want to delete this task?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Вы точно хотите удалить эту задачу?"
+msgstr[1] "Вы точно хотите удалить эти задачи?"
+msgstr[2] "Вы точно хотите удалить эти задачи?"
 
 #: GTG/gtk/delete_dialog.py:74
 msgid "Keep selected tasks"
 msgid_plural "Keep selected task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Сохранить выбранную задачу"
+msgstr[1] "Сохранить выбранные задачи"
+msgstr[2] "Сохранить выбранные задачи"
 
 #: GTG/gtk/delete_dialog.py:77
 msgid "Permanently remove tasks"
 msgid_plural "Permanently remove task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Окончательно удалить задачу"
+msgstr[1] "Окончательно удалить задачи"
+msgstr[2] "Окончательно удалить задачи"
 
 #: GTG/gtk/delete_dialog.py:108
 #, python-format
@@ -111,30 +121,32 @@ msgid ""
 "\n"
 "And %d more tasks"
 msgstr ""
+"\n"
+"И еще %d задач"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
-msgstr ""
+msgstr "Пароль:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:52
 msgid "Filename:"
-msgstr ""
+msgstr "Имя файла:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "Импорт меток"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
-msgstr ""
+msgstr "Все метки"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags"
-msgstr ""
+msgstr "Только эти метки"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
-msgstr ""
+msgstr "Метки для синхронизации"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:70
 #: GTG/core/treefactory.py:79
@@ -143,23 +155,23 @@ msgstr "Все задачи"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags"
-msgstr ""
+msgstr "Задачи с такими метками"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
-msgstr ""
+msgstr "Пользователь"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Import tasks from @ replies "
-msgstr ""
+msgstr "Импортировать задачи из ответов почты "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:87
 msgid "Import tasks from direct messages"
-msgstr ""
+msgstr "Импортировать задачи из сообщений"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "Импортировать метки из Ваших твитов"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:95
 msgid "Tag your GTG tasks with the bug tags"
@@ -171,44 +183,47 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:51
 msgid "Check for new tasks every"
-msgstr ""
+msgstr "Проверять новые задачи каждые"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:96
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " минуту"
+msgstr[1] " минуты"
+msgstr[2] " минут"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
-msgstr ""
+msgstr "К синхронизации все готово"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 #, python-format
 msgid "Syncing your only task"
 msgid_plural "Syncing all %d tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Синхронизировать только задачу"
+msgstr[1] "Синхронизировать все %d задачи"
+msgstr[2] "Синхронизировать все %d задач"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There's no task tagged %s"
-msgstr ""
+msgstr "Нет задач с меткой %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
 msgid "Syncing a task tagged %s"
 msgid_plural "Syncing %d tasks tagged %s"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Синхронизировать %d задачу с метками %s"
+msgstr[1] "Синхронизировать %d задачи с метками %s"
+msgstr[2] "Синхронизировать %d задач с метками %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
-msgstr ""
+msgstr "Запретить синхронизацию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:184
 msgid "Enable syncing"
-msgstr ""
+msgstr "Разрешить синхронизацию"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default backend"
@@ -216,18 +231,19 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled"
-msgstr ""
+msgstr "Синхронизация разрешена"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 #: GTG/gtk/backends_dialog/addpanel.py:177
 msgid "Syncing is <span color=\"red\">disabled</span>"
-msgstr ""
+msgstr "Синхронизация <span color=\"red\">запрещена</span>"
 
 #: GTG/gtk/backends_dialog/addpanel.py:183
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Автор"
+msgstr[1] "Авторы"
+msgstr[2] "Авторы"
 
 #: GTG/gtk/backends_dialog/__init__.py:287
 #, python-format
@@ -546,7 +562,7 @@ msgstr "Новая _задача"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid "Open GTG documentation in your web browser"
-msgstr ""
+msgstr "Открыть документацию GTG в браузере"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "Redo"
@@ -558,7 +574,7 @@ msgstr "Сбросить цвет"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:36
 msgid "Set due date"
-msgstr ""
+msgstr "Установить дату завершения"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:37
 msgid "T_oolbar"
@@ -575,7 +591,7 @@ msgstr "Метки"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Tasks"
-msgstr ""
+msgstr "Задачи"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:41
 msgid "Und_ismiss"
@@ -615,7 +631,7 @@ msgstr "_Быстрое добавление"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:50
 msgid "_Set start date"
-msgstr ""
+msgstr "_Установить дату начала"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:51
 msgid "_Tags Sidebar"
@@ -635,23 +651,23 @@ msgstr "Рабочий план"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:55
 msgid "_clear due date"
-msgstr ""
+msgstr "О_чистить дату завершения"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:56
 msgid "_clear start date"
-msgstr ""
+msgstr "О_чистить дату начала"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:57
 msgid "_later"
-msgstr ""
+msgstr "по_зже"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:58
 msgid "_now"
-msgstr ""
+msgstr "сейч_ас"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:59
 msgid "_soon"
-msgstr ""
+msgstr "вс_коре"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:60
 msgid "_tomorrow"
@@ -703,11 +719,11 @@ msgstr "Показать только доступные для выполнен
 
 #: GTG/gtk/browser/__init__.py:47
 msgid "Hide this tag from the workview"
-msgstr ""
+msgstr "Скрыть эту метку из рабочего плана"
 
 #: GTG/gtk/browser/__init__.py:48
 msgid "Show this tag in the workview"
-msgstr ""
+msgstr "Показывать эту метку в рабочем плане"
 
 #: GTG/gtk/browser/custominfobar.py:36
 #, python-format
@@ -732,19 +748,19 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
-msgstr ""
+msgstr "Пропустить"
 
 #: GTG/gtk/browser/custominfobar.py:114 GTG/gtk/browser/custominfobar.py:119
 msgid "Ok"
-msgstr ""
+msgstr "ОК"
 
 #: GTG/gtk/browser/custominfobar.py:140
 msgid "Confirm"
-msgstr ""
+msgstr "Подвердить"
 
 #: GTG/gtk/browser/custominfobar.py:142
 msgid "Continue"
-msgstr ""
+msgstr "Далее"
 
 #: GTG/gtk/browser/treeview_factory.py:316
 msgid "Start date"
@@ -756,7 +772,7 @@ msgstr "Ожидается"
 
 #: GTG/gtk/browser/treeview_factory.py:347
 msgid "Closed date"
-msgstr ""
+msgstr "Дата закрытия"
 
 #: GTG/gtk/browser/treeview_factory.py:392
 msgid "Title"
@@ -804,12 +820,12 @@ msgstr "Эта заметка больше не существует в Tomboy. 
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
-msgstr ""
+msgstr "Послать по почте"
 
 #: GTG/plugins/send_email/sendEmail.py:69
 #, python-format
 msgid "Status: %s"
-msgstr ""
+msgstr "Статус: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:70
 #, python-format
@@ -817,6 +833,8 @@ msgid ""
 "\n"
 "Tags: %s"
 msgstr ""
+"\n"
+"Метки: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:71
 #, python-format
@@ -825,6 +843,9 @@ msgid ""
 "Subtasks:\n"
 "%s"
 msgstr ""
+"\n"
+"Подзадачи: \n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:73
 #, python-format
@@ -833,11 +854,14 @@ msgid ""
 "Task content:\n"
 "%s"
 msgstr ""
+"\n"
+"Описание задачи\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:76
 #, python-format
 msgid "Task: %(task_title)s"
-msgstr ""
+msgstr "Задача: %(task_title)s"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "<b>Location Determination Method</b>"
@@ -888,11 +912,11 @@ msgstr "Шаблон не найден"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "Could not generate the document: %s"
-msgstr ""
+msgstr "Не удалось сформировать документ: %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
-msgstr ""
+msgstr "Экспортировать перечисленные задачи"
 
 #: GTG/plugins/export/export.py:322
 msgid "Choose where to save your list"
@@ -900,49 +924,54 @@ msgstr "Укажите, где сохранить ваш список"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:18
 msgid "Foldable booklet (PDF)"
-msgstr ""
+msgstr "Складной буклет (PDF)"
 
 #: GTG/plugins/export/export_templates/description_pocketmod.py:19
 msgid ""
 "A template to create a <a href=\"http://www.pocketmod.com\">PocketMod</a>, "
 "which is a  small foldable booklet."
 msgstr ""
+"Шаблон <a href=\"http://www.pocketmod.com\">PocketMod</> является небольшим "
+"складным буклетом."
 
 #: GTG/plugins/export/export_templates/description_simple.py:18
 msgid "A simple Web page (nicely printable)"
-msgstr ""
+msgstr "Простая веб-страница (удобная печать)"
 
 #: GTG/plugins/export/export_templates/description_simple.py:19
 msgid ""
 "A template to create a simple HTML page with some tasks. It can be printed "
 "nicely."
 msgstr ""
+"Шаблон создания простой HTML страницы с несколькими задачами. Может быть "
+"красиво напечатан."
 
 #: GTG/plugins/export/export_templates/description_sexy.py:18
 msgid "A professional-looking HTML page"
-msgstr ""
+msgstr "Профессионально оформленная HTML страница"
 
 #: GTG/plugins/export/export_templates/description_sexy.py:19
 msgid ""
 "A template to create a HTML page with some tasks and tags. Tags colors are "
 "also displayed."
 msgstr ""
+"Шаблон простой HTML страницы с несколькими задачами. Метки будут цветными."
 
 #: GTG/plugins/export/export_templates/description_textual.py:18
 msgid "Text-only"
-msgstr ""
+msgstr "Только текст"
 
 #: GTG/plugins/export/export_templates/description_textual.py:19
 msgid "A template to create a simple text file with some tasks."
-msgstr ""
+msgstr "Шаблон текстового списка задач."
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
-msgstr ""
+msgstr "Отчет о состоянии"
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:19
 msgid "A template to create a compact text file listing only task titles."
-msgstr ""
+msgstr "Шаблон краткого списка заголовков задач."
 
 #: GTG/plugins/hamster/hamster.py:154
 msgid "Start task in Hamster"
@@ -966,7 +995,7 @@ msgstr "gtg уже запущена!"
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
-msgstr ""
+msgstr "Remember The Milk"
 
 #: GTG/backends/backend_rtm.py:58
 msgid ""
@@ -979,7 +1008,7 @@ msgstr ""
 
 #: GTG/backends/backend_tomboy.py:41
 msgid "Tomboy"
-msgstr ""
+msgstr "Tomboy"
 
 #: GTG/backends/backend_tomboy.py:45
 msgid ""
@@ -991,7 +1020,7 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
-msgstr ""
+msgstr "Launchpad"
 
 #: GTG/backends/backend_launchpad.py:57
 msgid ""
@@ -1011,23 +1040,23 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
-msgstr ""
+msgstr "Ошибка"
 
 #: GTG/backends/backend_launchpad.py:324
 msgid "Reported by: "
-msgstr ""
+msgstr "Сообщил(а): "
 
 #: GTG/backends/backend_launchpad.py:329
 msgid "Link to bug: "
-msgstr ""
+msgstr "Ссылка на ошибку: "
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
-msgstr ""
+msgstr "Твиттер"
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
-msgstr ""
+msgstr "Импортирует ваши сообщения из Твиттера в GTG "
 
 #: GTG/backends/rtm/rtm.py:53
 msgid "Invalid state"
@@ -1035,23 +1064,23 @@ msgstr "Недопустимое состояние"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
-msgstr ""
+msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
-msgstr ""
+msgstr "Импортирует ваши сообщения из identi.ca в GTG "
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
-msgstr ""
+msgstr "Локальный файл"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
-msgstr ""
+msgstr "Ваши задачи сохранены в текстовом файле формата XML. "
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
-msgstr ""
+msgstr "Gnote"
 
 #: GTG/backends/backend_gnote.py:46
 msgid ""
@@ -1063,11 +1092,11 @@ msgstr ""
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
-msgstr ""
+msgstr "Задачи в Evolution"
 
 #: GTG/backends/backend_evolution.py:73
 msgid "Lets you synchronize your GTG tasks with Evolution tasks"
-msgstr ""
+msgstr "Синхронизирует ваши задачи в GTG и Evolution"
 
 #: GTG/core/firstrun_tasks.py:8
 msgid "Getting started with GTG"
@@ -1358,6 +1387,29 @@ msgid ""
 "\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"Поле для быстрого ввода - самый простой способ создания новой задачи. В меню "
+"Вид можно включить или отключить это поле.\n"
+"\n"
+"Чтобы добавить задачу, напечатайте ее заголовок и нажмите ВВОД. После этого "
+"задача будет добавлена в список, в котором она будет выделена. Если в панели "
+"меток будет выделена метка, то она будет установлена для этой задачи.\n"
+"\n"
+"Можно сразу задать метки (tags) и даты завершения (due) и начала (defer) "
+"работы над задачей. Синтаксис атрибутов таков:\n"
+"\n"
+"tags:метка1, метка2, метка3\n"
+" - Таким способом можно задать сразу несколько меток, разделив их запятыми\n"
+"\n"
+"due:дата\n"
+"defer:дата \n"
+" - Дата может быть задана в формате be yyyy-mm-dd (например, 2009-04-01) или "
+"yyyymmdd (20090401) или mmdd (0401, в этом случае будет использован текущий "
+"год) или сегодня(today) или завтра или просто день недели (например, "
+"due:monday означает ближайший понедельник)\n"
+"\n"
+"Заданные таким способом атрибуты не отображаются в заголовке задачи.\n"
+"\n"
+"Если слово начинается с символа @, то оно воспринимается как метка."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
