--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-08-17 12:40+0200\n"
-"PO-Revision-Date: 2010-12-11 00:35+0000\n"
+"PO-Revision-Date: 2011-11-07 09:23+0000\n"
 "Last-Translator: Fitoschido <fitoschido@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2011-08-18 04:39+0000\n"
-"X-Generator: Launchpad (build 13697)\n"
+"X-Launchpad-Export-Date: 2011-11-08 05:50+0000\n"
+"X-Generator: Launchpad (build 14231)\n"
 
 #: GTG/gtk/deletion.glade.h:1
 msgid "Confirm task deletion"
@@ -76,7 +76,7 @@ msgstr "_Acerca del complemento"
 
 #: GTG/gtk/preferences.py:38
 msgid "Click on a plugin to get a description here."
-msgstr ""
+msgstr "Pulse en un complemento para ver su descripción aquí."
 
 #: GTG/gtk/delete_dialog.py:63
 msgid ""
@@ -89,20 +89,20 @@ msgstr[1] ""
 #: GTG/gtk/delete_dialog.py:68
 msgid "Are you sure you want to delete these tasks?"
 msgid_plural "Are you sure you want to delete this task?"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "¿Está seguro de que quiere eliminar estas tareas?"
+msgstr[1] "¿Está seguro de que quiere eliminar esta tarea?"
 
 #: GTG/gtk/delete_dialog.py:74
 msgid "Keep selected tasks"
 msgid_plural "Keep selected task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Conservar tareas seleccionadas"
+msgstr[1] "Conservar tarea seleccionada"
 
 #: GTG/gtk/delete_dialog.py:77
 msgid "Permanently remove tasks"
 msgid_plural "Permanently remove task"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Eliminar tareas permanentemente"
+msgstr[1] "Eliminar tarea permanentemente"
 
 #: GTG/gtk/delete_dialog.py:108
 #, python-format
@@ -110,30 +110,32 @@ msgid ""
 "\n"
 "And %d more tasks"
 msgstr ""
+"\n"
+"Y %d tareas más"
 
 #: GTG/gtk/backends_dialog/parameters_ui/passwordui.py:50
 msgid "Password:"
-msgstr ""
+msgstr "Contraseña:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/pathui.py:52
 msgid "Filename:"
-msgstr ""
+msgstr "Nombre de archivo:"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:63
 msgid "Import tags"
-msgstr ""
+msgstr "Importar etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:64
 msgid "All tags"
-msgstr ""
+msgstr "Todas las etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:65
 msgid "Just these tags"
-msgstr ""
+msgstr "Solo estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:69
 msgid "Tags to sync"
-msgstr ""
+msgstr "Etiquetas a sincronizar"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:70
 #: GTG/core/treefactory.py:79
@@ -142,23 +144,23 @@ msgstr "Todas las tareas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:71
 msgid "Tasks with these tags"
-msgstr ""
+msgstr "Tareas con estas etiquetas"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:76
 msgid "Username"
-msgstr ""
+msgstr "Nombre de usuario"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:82
 msgid "Import tasks from @ replies "
-msgstr ""
+msgstr "Importar tareas de @menciones "
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:87
 msgid "Import tasks from direct messages"
-msgstr ""
+msgstr "Importar tareas de mensajes directos"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:91
 msgid "Import tasks from your tweets"
-msgstr ""
+msgstr "Importar tareas de sus twits"
 
 #: GTG/gtk/backends_dialog/parameters_ui/__init__.py:95
 msgid "Tag your GTG tasks with the bug tags"
@@ -170,29 +172,29 @@ msgstr ""
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:51
 msgid "Check for new tasks every"
-msgstr ""
+msgstr "Comprobar nuevas tareas cada"
 
 #: GTG/gtk/backends_dialog/parameters_ui/periodui.py:96
 msgid " minute"
 msgid_plural " minutes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] " minuto"
+msgstr[1] " minutos"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:162
 msgid "Ready to start syncing"
-msgstr ""
+msgstr "Listo para comenzar la sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:164
 #, python-format
 msgid "Syncing your only task"
 msgid_plural "Syncing all %d tasks"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Sincronizando su única tarea"
+msgstr[1] "Sincronizando sus %d tareas"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:169
 #, python-format
 msgid "There's no task tagged %s"
-msgstr ""
+msgstr "No hay ninguna tarea etiquetada %s"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:171
 #, python-format
@@ -203,35 +205,35 @@ msgstr[1] ""
 
 #: GTG/gtk/backends_dialog/configurepanel.py:182
 msgid "Disable syncing"
-msgstr ""
+msgstr "Desactivar sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:184
 msgid "Enable syncing"
-msgstr ""
+msgstr "Activar sincronización"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:192
 msgid "This is the default backend"
-msgstr ""
+msgstr "Éste es el motor predeterminado"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:195
 msgid "Syncing is enabled"
-msgstr ""
+msgstr "La sincronización está activada"
 
 #: GTG/gtk/backends_dialog/configurepanel.py:197
 #: GTG/gtk/backends_dialog/addpanel.py:177
 msgid "Syncing is <span color=\"red\">disabled</span>"
-msgstr ""
+msgstr "La sincronización está <span color=\"red\">desactivada</span>"
 
 #: GTG/gtk/backends_dialog/addpanel.py:183
 msgid "Author"
 msgid_plural "Authors"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Autor"
+msgstr[1] "Autores"
 
 #: GTG/gtk/backends_dialog/__init__.py:287
 #, python-format
 msgid "Do you really want to remove the backend '%s'?"
-msgstr ""
+msgstr "¿Está seguro de que quiere eliminar el motor «%s»?"
 
 #: GTG/gtk/editor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -268,7 +270,7 @@ msgstr "Ahora"
 
 #: GTG/gtk/editor/taskeditor.glade.h:9
 msgid "Someday"
-msgstr ""
+msgstr "Algún día"
 
 #: GTG/gtk/editor/taskeditor.glade.h:10
 msgid "Soon"
@@ -539,7 +541,7 @@ msgstr "Nueva _tarea"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:33
 msgid "Open GTG documentation in your web browser"
-msgstr ""
+msgstr "Abrir la documentación de GTG en su navegador web"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:34
 msgid "Redo"
@@ -551,7 +553,7 @@ msgstr "Reiniciar color"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:36
 msgid "Set due date"
-msgstr ""
+msgstr "Establecer fecha de vencimiento"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:37
 msgid "T_oolbar"
@@ -568,7 +570,7 @@ msgstr "Etiquetas"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:40
 msgid "Tasks"
-msgstr ""
+msgstr "Tareas"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:41
 msgid "Und_ismiss"
@@ -636,15 +638,15 @@ msgstr ""
 
 #: GTG/gtk/browser/taskbrowser.glade.h:57
 msgid "_later"
-msgstr ""
+msgstr "_después"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:58
 msgid "_now"
-msgstr ""
+msgstr "_ahora"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:59
 msgid "_soon"
-msgstr ""
+msgstr "p_ronto"
 
 #: GTG/gtk/browser/taskbrowser.glade.h:60
 msgid "_tomorrow"
@@ -721,11 +723,11 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:105
 msgid "Configure backend"
-msgstr ""
+msgstr "Configurar motor"
 
 #: GTG/gtk/browser/custominfobar.py:106
 msgid "Ignore"
-msgstr ""
+msgstr "Ignorar"
 
 #: GTG/gtk/browser/custominfobar.py:114 GTG/gtk/browser/custominfobar.py:119
 msgid "Ok"
@@ -733,11 +735,11 @@ msgstr ""
 
 #: GTG/gtk/browser/custominfobar.py:140
 msgid "Confirm"
-msgstr ""
+msgstr "Confimar"
 
 #: GTG/gtk/browser/custominfobar.py:142
 msgid "Continue"
-msgstr ""
+msgstr "Continuar"
 
 #: GTG/gtk/browser/treeview_factory.py:316
 msgid "Start date"
@@ -797,12 +799,12 @@ msgstr "Esta nota Tomboy ya no existe. ¿Desea crearla?"
 
 #: GTG/plugins/send_email/sendEmail.py:44
 msgid "Send via email"
-msgstr ""
+msgstr "Enviar por correo electrónico"
 
 #: GTG/plugins/send_email/sendEmail.py:69
 #, python-format
 msgid "Status: %s"
-msgstr ""
+msgstr "Estado: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:70
 #, python-format
@@ -810,6 +812,8 @@ msgid ""
 "\n"
 "Tags: %s"
 msgstr ""
+"\n"
+"Etiquetas: %s"
 
 #: GTG/plugins/send_email/sendEmail.py:71
 #, python-format
@@ -818,6 +822,9 @@ msgid ""
 "Subtasks:\n"
 "%s"
 msgstr ""
+"\n"
+"Subtareas:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:73
 #, python-format
@@ -826,11 +833,14 @@ msgid ""
 "Task content:\n"
 "%s"
 msgstr ""
+"\n"
+"Contenido de la tarea:\n"
+"%s"
 
 #: GTG/plugins/send_email/sendEmail.py:76
 #, python-format
 msgid "Task: %(task_title)s"
-msgstr ""
+msgstr "Tarea: %(task_title)s"
 
 #: GTG/plugins/geolocalized_tasks/geolocalized.glade.h:1
 msgid "<b>Location Determination Method</b>"
@@ -883,7 +893,7 @@ msgstr "Plantilla no encontrada"
 #: GTG/plugins/export/export.py:121
 #, python-format
 msgid "Could not generate the document: %s"
-msgstr ""
+msgstr "No se pudo generar el documento: %s"
 
 #: GTG/plugins/export/export.py:169
 msgid "Export the tasks currently listed"
@@ -925,19 +935,22 @@ msgstr ""
 
 #: GTG/plugins/export/export_templates/description_textual.py:18
 msgid "Text-only"
-msgstr ""
+msgstr "Solo texto"
 
 #: GTG/plugins/export/export_templates/description_textual.py:19
 msgid "A template to create a simple text file with some tasks."
 msgstr ""
+"Una plantilla para crear un archivo de texto sencillo con algunas tareas."
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:18
 msgid "Status report"
-msgstr ""
+msgstr "Informe de estado"
 
 #: GTG/plugins/export/export_templates/description_statusrpt.py:19
 msgid "A template to create a compact text file listing only task titles."
 msgstr ""
+"Una plantilla para crear un archivo de texto compacto que enlista solo los "
+"títulos de las tareas."
 
 #: GTG/plugins/hamster/hamster.py:154
 msgid "Start task in Hamster"
@@ -961,7 +974,7 @@ msgstr "¡gtg ya se está ejecutando!"
 
 #: GTG/backends/backend_rtm.py:54
 msgid "Remember The Milk"
-msgstr ""
+msgstr "Remember The Milk"
 
 #: GTG/backends/backend_rtm.py:58
 msgid ""
@@ -974,7 +987,7 @@ msgstr ""
 
 #: GTG/backends/backend_tomboy.py:41
 msgid "Tomboy"
-msgstr ""
+msgstr "Tomboy"
 
 #: GTG/backends/backend_tomboy.py:45
 msgid ""
@@ -986,7 +999,7 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:53
 msgid "Launchpad"
-msgstr ""
+msgstr "Launchpad"
 
 #: GTG/backends/backend_launchpad.py:57
 msgid ""
@@ -1006,19 +1019,19 @@ msgstr ""
 
 #: GTG/backends/backend_launchpad.py:244
 msgid "Bug"
-msgstr ""
+msgstr "Fallo"
 
 #: GTG/backends/backend_launchpad.py:324
 msgid "Reported by: "
-msgstr ""
+msgstr "Informado por: "
 
 #: GTG/backends/backend_launchpad.py:329
 msgid "Link to bug: "
-msgstr ""
+msgstr "Enlace al fallo: "
 
 #: GTG/backends/backend_twitter.py:54
 msgid "Twitter"
-msgstr ""
+msgstr "Twitter"
 
 #: GTG/backends/backend_twitter.py:58
 msgid "Imports your twitter  messages into your GTG "
@@ -1030,7 +1043,7 @@ msgstr "Estado no válido"
 
 #: GTG/backends/backend_identica.py:54
 msgid "Identi.ca"
-msgstr ""
+msgstr "Identi.ca"
 
 #: GTG/backends/backend_identica.py:58
 msgid "Imports your identi.ca  messages into your GTG "
@@ -1038,7 +1051,7 @@ msgstr ""
 
 #: GTG/backends/backend_localfile.py:61
 msgid "Local File"
-msgstr ""
+msgstr "Archivo local"
 
 #: GTG/backends/backend_localfile.py:66
 msgid "Your tasks are saved in a text file (XML format). "
@@ -1046,7 +1059,7 @@ msgstr ""
 
 #: GTG/backends/backend_gnote.py:42
 msgid "Gnote"
-msgstr ""
+msgstr "Gnote"
 
 #: GTG/backends/backend_gnote.py:46
 msgid ""
@@ -1058,11 +1071,11 @@ msgstr ""
 
 #: GTG/backends/backend_evolution.py:69
 msgid "Evolution tasks"
-msgstr ""
+msgstr "Tareas de Evolution"
 
 #: GTG/backends/backend_evolution.py:73
 msgid "Lets you synchronize your GTG tasks with Evolution tasks"
-msgstr ""
+msgstr "Le permite sincronizar sus tareas de GTG con las de Evolution"
 
 #: GTG/core/firstrun_tasks.py:8
 msgid "Getting started with GTG"
